--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@mipmap/runlogin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -11,52 +12,64 @@
 
 
     <EditText
+        android:id="@+id/et_Nickname"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:id="@+id/et_Nickname"
-        android:layout_marginTop="43dp"
-        android:textAlignment="center"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="43dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:textAlignment="center" />
 
     <EditText
+        android:id="@+id/et_password"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:id="@+id/et_password"
         android:layout_below="@+id/et_Nickname"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="59dp"
+        android:ems="10"
+        android:inputType="textPassword"
         android:textAlignment="center" />
 
     <Button
+        android:id="@+id/bt_Aceptar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Aceptar"
-        android:id="@+id/bt_Aceptar"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_below="@+id/tv_signUp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:text="@string/btn_Accept" />
 
     <ProgressBar
+        android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:id="@+id/progressBar"
-        android:layout_marginTop="53dp"
-        android:max="100"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="47dp"
         android:indeterminate="false"
-        android:layout_below="@+id/bt_Aceptar"
-        android:layout_alignParentStart="true" />
+        android:max="100" />
 
     <CheckBox
+        android:id="@+id/checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Remember user?"
-        android:id="@+id/checkBox"
         android:layout_below="@+id/et_password"
         android:layout_centerHorizontal="true"
-        android:checked="true" />
+        android:checked="true"
+        android:text="@string/rememberUser" />
+
+    <TextView
+        android:id="@+id/tv_signUp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/checkBox"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:text="@string/register"
+        android:textSize="20dp" />
 </RelativeLayout>
