--- a/app/src/main/res/layout/activity_chrono.xml
+++ b/app/src/main/res/layout/activity_chrono.xml
@@ -55,7 +55,7 @@
         android:gravity="center">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/btn_cancel"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
@@ -63,7 +63,7 @@
             android:text="@string/cancel" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/btn_save"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
