--- a/app/src/main/res/layout/activity_historyview.xml
+++ b/app/src/main/res/layout/activity_historyview.xml
@@ -5,16 +5,18 @@
     android:orientation="vertical"
     android:weightSum="1">
 
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal" />
-
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:layout_weight="0"
         android:gravity="bottom"></TableRow>
+
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0"
+        android:textFilterEnabled="false" />
 </LinearLayout>
