--- a/app/src/main/res/layout/activity_historyview.xml
+++ b/app/src/main/res/layout/activity_historyview.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@mipmap/descarga"
     android:orientation="vertical"
     android:weightSum="1">
 
@@ -18,5 +19,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_weight="0"
+        android:background="#d4020101"
         android:textFilterEnabled="false" />
 </LinearLayout>
