--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#8c4c4c">
+    android:background="@mipmap/runlogin">
 
     <Button
         android:id="@+id/btn_newrace"
@@ -14,6 +14,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="49dp"
+        android:background="#d4020101"
         android:text="@string/newRace"
         android:textSize="30dp" />
 
@@ -24,6 +25,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
+        android:background="#d4020101"
         android:text="@string/History"
         android:textSize="30dp" />
 
@@ -35,6 +37,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="48dp"
+        android:background="#d4020101"
         android:text="@string/Logout"
         android:textSize="30dp" />
 </RelativeLayout>
